2005-07-08  Paul Eggert  <eggert@cs.ucla.edu>

	* Version 5.3.1.

	Fix porting problems reported by Eric Blake.

	* configure.ac: Remove check for AC_HEADER_TIOCGWINSZ.
	* src/cat.c, src/ls.c, src/stty.c: Include stropts.h if available,
	because POSIX says that's where ioctl is declared.
	* src/cat.c: Use HAVE_SYS_IOCTL_H instead of _POSIX_SOURCE
	to decide whether to include <sys/ioctl.h>.
	* src/stty.c: Use only HAVE_SYS_IOCTL_H to decide whether
	to include <sys/ioctl.h>.

	* src/id.c (print_user): Don't assume uid fits in unsigned int.
	(print_group): Likewise, for gid.

2005-07-05  Paul Eggert  <eggert@cs.ucla.edu>

	* src/system.h (DECIMAL_DIGIT_ACCUMULATE): Generate a hard error
	(not just a warning) if GCC is used and the types don't match.

2005-07-04  Paul Eggert  <eggert@cs.ucla.edu>

	* src/system.h (VERIFY_W_TYPEOF): Remove; no longer needed.
	(DECIMAL_DIGIT_ACCUMULATE): Change last arg from T's maximum value
	to T itself.  All callers changed.  Check that T is unsigned, and
	that Accum is of type T.  This fixes a bug in the unlikely case
	where SIZE_MAX <= INT_MAX, and it no longer requires typeof to do
	the proper validity checks.

	* src/od.c: Adjust to verify.h change.
	* src/system.h (VERIFY_W_TYPEOF): Likewise.

2005-07-04  Jim Meyering  <jim@meyering.net>

	* src/system.h: Include "verify.h".

	* src/system.h (verify): Rename from VERIFY_EXPR, to be lower case,
	like assert.  Use sizeof, rather than equivalent ((...)0), for
	it's slightly simpler syntax.  Suggestions from Paul Eggert.
	(verify_decl): Rename from VERIFY.
	* src/od.c: Reflect name change.

2005-07-03  Jim Meyering  <jim@meyering.net>

	* NEWS: cp and mv: the --reply=X option is deprecated
	Suggested by Bob Proulx, after numerous user complaints
	about how --reply=no appeared not to work.
	* src/mv.c (main): Using --reply now evokes a warning.
	(usage): Remove description of --reply.
	* src/cp.c (main): Using --reply now evokes a warning.
	(usage): Remove description of --reply.