@@ -26,7 +26,6 @@
 #include <getopt.h>
 #include <sys/types.h>
 #include <signal.h>
-#include <stdio.h>
 #include "system.h"
 #include "error.h"
 #include "hard-locale.h"
